# A2A-Agent

./: README.md
jingping_agent/: __main__.py  agent.py  agent_executor.py  main.py  pyproject.toml  tools.py
modi_agent/: __main__.py  agent.py  agent_executor.py  main.py  pyproject.toml  tools.py
trump_agent/: pyproject.toml
trump_agent/trump/: agent.py  tools.py
