[project]
name = "trump-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.11",
    "google-adk>=1.18.0",
    "httpx>=0.28.1",
    "langchain-groq>=1.1.2",
    "litellm>=1.81.9",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.1",
]
